# Clean-Code-in-Python

./: .gitignore  .pylintrc  Makefile  pyproject.toml
src/: mypy.py
